Added features • Added support for specific block search. • Added more locale lines. • Changed to one permission for all commands. • Added blocks command for block search.