@@ -13,13 +13,36 @@ import org.bukkit.plugin.Plugin;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 @Getter
 public class CoreProtectManager {
+
+	private final List<Object> blocksOverworld = Arrays.asList(
+			Material.COAL_ORE,
+			Material.COPPER_ORE,
+			Material.DIAMOND_ORE,
+			Material.GOLD_ORE,
+			Material.LAPIS_ORE,
+			Material.EMERALD_ORE,
+			Material.IRON_ORE,
+			Material.REDSTONE_ORE,
+			Material.DEEPSLATE_COAL_ORE,
+			Material.DEEPSLATE_COPPER_ORE,
+			Material.DEEPSLATE_DIAMOND_ORE,
+			Material.DEEPSLATE_GOLD_ORE,
+			Material.DEEPSLATE_LAPIS_ORE,
+			Material.DEEPSLATE_EMERALD_ORE,
+			Material.DEEPSLATE_IRON_ORE,
+			Material.DEEPSLATE_REDSTONE_ORE,
+			Material.SPAWNER);
+
+	private final List<Object> blocksNether = Arrays.asList(
+			Material.ANCIENT_DEBRIS,
+			Material.NETHER_GOLD_ORE,
+			Material.SPAWNER);
 
 	private CoreProtectAPI coreProtectAPI;
 	private String reason;
@@ -42,32 +65,53 @@ public class CoreProtectManager {
 		}
 	}
 
-	public void findOres(Player player, OfflinePlayer target, String time) {
-		final List<String> username = Collections.singletonList(target.getName());
-		final List<Integer> action = List.of(0);
-
-		final List<Object> blocks = Arrays.asList(
-				Material.COAL_ORE,
-				Material.COPPER_ORE,
-				Material.DIAMOND_ORE,
-				Material.GOLD_ORE,
-				Material.LAPIS_ORE,
-				Material.EMERALD_ORE,
-				Material.IRON_ORE,
-				Material.REDSTONE_ORE,
-				Material.DEEPSLATE_COAL_ORE,
-				Material.DEEPSLATE_COPPER_ORE,
-				Material.DEEPSLATE_DIAMOND_ORE,
-				Material.DEEPSLATE_GOLD_ORE,
-				Material.DEEPSLATE_LAPIS_ORE,
-				Material.DEEPSLATE_EMERALD_ORE,
-				Material.DEEPSLATE_IRON_ORE,
-				Material.DEEPSLATE_REDSTONE_ORE);
+	public void findBlocks(Player player, OfflinePlayer target, String time, List<Object> blocks) {
+		final List<String> username = Arrays.asList(target.getName());
+		final List<Integer> action = Arrays.asList(0);
 
 		final int taskId = Bukkit.getScheduler().runTaskTimer(ShadowTrace.getPlugin(), () -> MessageHandler.sendAction(player, Messages.SRC_ACTION_SEARCH), 0L, 40L).getTaskId();
 
 		Bukkit.getScheduler().runTaskAsynchronously(ShadowTrace.getPlugin(), () -> {
 			final List<String[]> lookup = coreProtectAPI.performLookup(convertToSeconds(time), username, null, blocks, null, action, 0, null);
+			final List<String> messageList = new ArrayList<>();
+
+			for (int i = 0; i < lookup.size() && i < 1500; i++) {
+				final String[] result = lookup.get(i);
+				final CoreProtectAPI.ParseResult parseResult = coreProtectAPI.parseResult(result);
+				final String world = parseResult.worldName();
+
+				if (!player.getWorld().getName().equals(world)) continue;
+
+				final long timestamp = parseResult.getTimestamp() / 1000;
+				final int locX = parseResult.getX();
+				final int locY = parseResult.getY();
+				final int locZ = parseResult.getZ();
+				final String block = parseResult.getBlockData().getMaterial().name();
+				final String out = world + ":" + locX + ":" + locY + ":" + locZ + ":" + block + ":" + timestamp;
+				messageList.add(out);
+			}
+
+			if (messageList.isEmpty()) {
+				Bukkit.getScheduler().cancelTask(taskId);
+				MessageHandler.sendMessage(player, "&6[&eShadowTrace&6] " + Messages.SRC_NO_DATA_FOUND);
+				MessageHandler.sendAction(player, Messages.SRC_ACTION_NO_DATA_FOUND);
+			} else {
+				ShadowTrace.getPacketHandler().sendData(player, messageList);
+				Bukkit.getScheduler().cancelTask(taskId);
+				MessageHandler.sendMessage(player, "&6[&eShadowTrace&6] " + Messages.SRC_DATA_FOUND);
+				MessageHandler.sendAction(player, Messages.SRC_ACTION_DATA_FOUND);
+			}
+		});
+	}
+
+	public void findOres(Player player, OfflinePlayer target, String time) {
+		final List<String> username = Arrays.asList(target.getName());
+		final List<Integer> action = Arrays.asList(0);
+
+		final int taskId = Bukkit.getScheduler().runTaskTimer(ShadowTrace.getPlugin(), () -> MessageHandler.sendAction(player, Messages.SRC_ACTION_SEARCH), 0L, 40L).getTaskId();
+
+		Bukkit.getScheduler().runTaskAsynchronously(ShadowTrace.getPlugin(), () -> {
+			final List<String[]> lookup = coreProtectAPI.performLookup(convertToSeconds(time), username, null, blocksOverworld, null, action, 0, null);
 			final List<String> messageList = new ArrayList<>();
 
 			for (int i = 0; i < lookup.size() && i < 1500; i++) {
@@ -97,17 +141,13 @@ public class CoreProtectManager {
 	}
 
 	public void findOresNether(Player player, OfflinePlayer target, String time) {
-		final List<String> username = Collections.singletonList(target.getName());
-		final List<Integer> action = List.of(0);
+		final List<String> username = Arrays.asList(target.getName());
+		final List<Integer> action = Arrays.asList(0);
 
-		final List<Object> blocks = Arrays.asList(
-				Material.ANCIENT_DEBRIS,
-				Material.NETHER_GOLD_ORE);
-
-		final int taskId = Bukkit.getScheduler().runTaskTimer(ShadowTrace.getPlugin(), () -> MessageHandler.sendAction(player, "&e---------- &6Samler blokkdata &e----------"), 0L, 40L).getTaskId();
+		final int taskId = Bukkit.getScheduler().runTaskTimer(ShadowTrace.getPlugin(), () -> MessageHandler.sendAction(player, Messages.SRC_ACTION_SEARCH), 0L, 40L).getTaskId();
 
 		Bukkit.getScheduler().runTaskAsynchronously(ShadowTrace.getPlugin(), () -> {
-			final List<String[]> lookup = coreProtectAPI.performLookup(convertToSeconds(time), username, null, blocks, null, action, 0, null);
+			final List<String[]> lookup = coreProtectAPI.performLookup(convertToSeconds(time), username, null, blocksNether, null, action, 0, null);
 			final List<String> messageList = new ArrayList<>();
 
 			for (int i = 0; i < lookup.size() && i < 300; i++) {
